--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hiveio/dhive": "^0.14.12",
     "@hiveio/keychain": "^1.0.4",
     "next": "10.0.7",
     "react": "17.0.1",
