--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@hiveio/dhive": "^0.14.12",
     "@hiveio/keychain": "^1.0.4",
+    "@vercel/node": "^1.9.0",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
